Fix #903: Clean-up maven dependencies